    ADDED: Useractions: added checkbox "enabled"
           and run mode option "Run in embedded terminal emulator"
    ADDED: the description of a dir contains its size if it is known

     ARCH: MediaButton uses Solid for medium detection
     ARCH: QuickSearch is moved to KrView from Detailed/Brief views
     ARCH: Keyboard handling is moved to KrView from Detailed/Brief views

    FIXED: [ 2202522 ] newly created hidden files are shown for a short time
    FIXED: calc space doesn't work on remote file systems
    FIXED: searcher doesn't start because of corrupt config files
    FIXED: Konfigurator doesn't detect every mimetype for "zip" files
    FIXED: Konfigurator keeps its original size
    FIXED: Konfigurator has scrollbars if necessary.
    FIXED: [ 2027518 ] Does not build with -DBUILD_SHARED_LIBS:BOOL=ON
           (thanks to Funda Wang)
    FIXED: [ 2041732 ] Krusader 2.0.0 beta1 missing title bar under Compiz
           (thanks to Danny Baumann for the patch)
    FIXED: [ 2023623 ] Krusader kept running after closing the main window
    FIXED: [ 1671543 ] horizontal/vertical mode fix in the Window menu
    FIXED: [ 1845105 ] mimetype magic can be disabled again
    FIXED: [ 2062651 ] Ctrl+Up selects the URL in the origin editbox
    FIXED: [ 1988893 ] konsole is started in a wrong directory
           please set "konsole --workdir %d" for the terminal (Konfigurator)
           as Krusader won't fix your config automatically
    FIXED: KDE4 workaround: no colors for synchronizer
    FIXED: MediaButton doesn't notice unmounted pen drives+CD/DVD-s
    FIXED: "local network" bookmark didn't work
    FIXED: bookmark menu was not always closed after opening a bookmark
    FIXED: [ 2017011 ] Crash when changing the Qt theme
    FIXED: icons for symlinks are corrupted
    FIXED: [ 2023599 ] start root mode Krusader works again (thanks to gladiac)
    FIXED: [ 1980765 ] error at creating ../dir directory