@@ -13,6 +13,7 @@
      ARCH: QuickSearch is moved to KrView from Detailed/Brief views
      ARCH: Keyboard handling is moved to KrView from Detailed/Brief views
 
+    FIXED: [ 2243628 ] Synchronizer overlooks files
     FIXED: [ 2202522 ] newly created hidden files are shown for a short time
     FIXED: calc space doesn't work on remote file systems
     FIXED: searcher doesn't start because of corrupt config files
